Archive2/d0/7bd1b8e02f26a1/output
main.cpp:2:1: error: unknown type name 'parse'
parse (partial) success
^
main.cpp:2:16: error: expected ';' after top level declarator
parse (partial) success
               ^
               ;
2 errors generated.
